--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ footer {
     background-size: cover;
 }
 .img1{
-    background-image: url("./New folder/WEB.jpg");
+    background-image: url("./WEB.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
